...
                android:layout_marginEnd="20dp"
                android:text="I often tend to go on my phone late at night."
                android:textColor="@color/colorSecondaryDark"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/question1Dropdown"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:background="@android:drawable/btn_dropdown"
                android:dropDownWidth="300dp"
...
                android:layout_marginEnd="20dp"
                android:text="I eat less than 2 hours before going to bed."
                android:textColor="@color/colorSecondaryDark"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/question2Dropdown"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:background="@android:drawable/btn_dropdown"
                android:dropDownWidth="300dp"
...
                android:layout_marginEnd="20dp"
                android:text="I have caffeine more than 3 hours before going to bed."
                android:textColor="@color/colorSecondaryDark"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/question3Dropdown"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:background="@android:drawable/btn_dropdown"
                android:dropDownWidth="300dp"
...
                android:layout_marginEnd="20dp"
                android:text="I tend to watch movies late at night."
                android:textColor="@color/colorSecondaryDark"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/question4Dropdown"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:background="@android:drawable/btn_dropdown"
                android:dropDownWidth="300dp"
...
                android:layout_marginEnd="20dp"
                android:text="I play video games late at night."
                android:textColor="@color/colorSecondaryDark"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/question5Dropdown"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:background="@android:drawable/btn_dropdown"
                android:dropDownWidth="300dp"
...
                android:layout_marginEnd="20dp"
                android:text="I go to the bar until late at night."
                android:textColor="@color/colorSecondaryDark"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/question6Dropdown"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:background="@android:drawable/btn_dropdown"
                android:dropDownWidth="300dp"
...
                android:layout_marginEnd="20dp"
                android:text="I am out late with friends."
                android:textColor="@color/colorSecondaryDark"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/question7Dropdown"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:background="@android:drawable/btn_dropdown"
                android:dropDownWidth="300dp"
...
                android:layout_marginEnd="20dp"
                android:text="I am restless and tend to move around a lot when I sleep."
                android:textColor="@color/colorSecondaryDark"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/question8Dropdown"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:background="@android:drawable/btn_dropdown"
                android:dropDownWidth="300dp"
...
                android:layout_marginEnd="20dp"
                android:text="I am talking to my partner late at night. "
                android:textColor="@color/colorSecondaryDark"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/question9Dropdown"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:background="@android:drawable/btn_dropdown"
                android:dropDownWidth="300dp"
...
                android:layout_marginEnd="20dp"
                android:text="I take naps during the day."
                android:textColor="@color/colorSecondaryDark"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/question10Dropdown"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:background="@android:drawable/btn_dropdown"
                android:dropDownWidth="300dp"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <Button
                    android:id="@+id/nextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/custom_button"
                    android:backgroundTint="@color/colorAccent"
...
