...
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivityLogo" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="284dp"
        android:layout_height="69dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="Email"
        android:textColorHint="@color/colorSecondaryDark"
...
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInTextView"
        android:background="@drawable/custom_edittext" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="282dp"
        android:layout_height="70dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        android:background="@drawable/custom_edittext"/>

    <Button
        android:id="@+id/logInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/colorAccent"
        android:onClick="logIn"
...
