<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activity.RelabelActivity">

    <ScrollView
        android:id="@+id/relabelScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="366dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/relabelTextView"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_textview_title"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="Step 1: Relabel"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryDark"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mcText"
                android:layout_width="313dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="How do you feel about staying up late and not getting enough sleep?"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryDark"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/feelingDropdown"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@android:drawable/btn_dropdown"
                android:dropDownWidth="300dp"
                android:dropDownHeight="1000dp"
                android:popupBackground="@color/colorSecondaryDark"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/journalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Please elaborate how you feel below"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/colorSecondaryDark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/titleEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="178dp"
                android:ems="10"
                android:text="Title..."
                android:layout_gravity="left"
                android:textColor="@color/colorSecondaryDark"
                android:textSize="20sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/bodyEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="Enter your thoughts here..."
                    android:inputType="textMultiLine"
                    android:nextFocusLeft="@id/bodyEditText"
                    android:nextFocusUp="@id/bodyEditText"
                    android:textColor="@color/colorSecondaryDark"
                    android:textColorHint="@color/colorSecondaryDark"
                    android:textSize="20sp"
                    android:background="@drawable/custom_edittext"
                    app:layout_constraintBottom_toTopOf="@id/nextButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/colorAccent"
                    android:background="@drawable/custom_button"
                    android:onClick="cancelRelabel"
                    android:text="Cancel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/nextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/custom_button"
                    android:backgroundTint="@color/colorAccent"
                    android:enabled="false"
                    android:onClick="nextButtonRelabel"
                    android:text="Next"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>